src/main/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beerservice
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: beerservice
