src/main/Kubernetes/beer_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beerservice-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - beerservice.eastus.cloudapp.azure.com
      secretName: beerservice-tls
  rules:
    - host: beerservice.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beerservice-service
                port:
                  number: 80
